# copilot-cli-insights

./: Cargo.toml  LICENSE  README.en.md  README.md  pricing.csv
shell/: copilot-insights.service  statusline-token.sh
src/: db.rs  main.rs
static/: app.js  index.html  styles.css
