[package]
name = "copilot-cli-insights"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
dirs = "5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
